<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeWindowBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/slidingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <RelativeLayout
            android:id="@+id/part1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_home_graphic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:layout_weight="1">

                    <com.appsfeature.education.util.MyGridItem
                        android:layout_width="110dp"
                        android:layout_height="110dp" >

                        <ImageView
                            android:id="@+id/img_profile_background"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:visibility="gone"
                            android:contentDescription="@string/app_name"
                            android:scaleType="centerCrop" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/img_profile"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/progile_bg"
                            android:src="@drawable/ic_logo"
                            android:contentDescription="@string/app_name"
                            android:scaleType="centerCrop" />

                    </com.appsfeature.education.util.MyGridItem>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:background="#50000000"
                    android:paddingBottom="8dp"
                    android:layout_height="wrap_content">

                    <com.appsfeature.education.util.MyTextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.appsfeature.education.util.MyTextView
                        android:id="@+id/phoneNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/name"
                        android:layout_centerHorizontal="true"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/part2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:orientation="vertical"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/option_1"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_horizontal|center_vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="centerCrop"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/ic_menu_live_class"
                            app:tint="@color/colorPrimary" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_option_1"
                            android:lines="2"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:textSize="18sp"/>
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/themeDividerColorDark"/>

                    <LinearLayout
                        android:id="@+id/option_2"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_horizontal|center_vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="centerCrop"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/ic_menu_video_lecture"
                            app:tint="@color/colorPrimary" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_option_2"
                            android:gravity="center"
                            android:lines="2"
                            android:ellipsize="end"
                            android:textSize="18sp"/>
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/themeDividerColorDark"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/option_3"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_horizontal|center_vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="centerCrop"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/ic_menu_test_series"
                            app:tint="@color/colorPrimary" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_option_3"
                            android:lines="2"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:textSize="18sp"/>
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/themeDividerColorDark"/>

                    <LinearLayout
                        android:id="@+id/option_4"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_horizontal|center_vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="centerCrop"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/ic_menu_study_material"
                            app:tint="@color/colorPrimary" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_option_4"
                            android:lines="2"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:textSize="18sp"/>
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/themeDividerColorDark"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/option_5"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_horizontal|center_vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="centerCrop"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/ic_profile"
                            app:tint="@color/colorPrimary" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_option_5"
                            android:lines="2"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:textSize="18sp"/>
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/themeDividerColorDark"/>

                    <LinearLayout
                        android:id="@+id/option_6"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_horizontal|center_vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="centerCrop"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/ic_menu_class_schedule"
                            app:tint="@color/colorPrimary" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_option_6"
                            android:lines="2"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:textSize="18sp"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>